// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`defaultNodeSorter button types should place button type inputs in the buttons slot 1`] = `-3`;

exports[`defaultNodeSorter button types should place submit buttons in the buttons slot 1`] = `-3`;

exports[`defaultNodeSorter captcha group handling should place captcha group nodes in the captcha slot regardless of node type 1`] = `-3`;

exports[`defaultNodeSorter checkbox handling should order checkboxes by group when in the same slot 1`] = `-2`;

exports[`defaultNodeSorter checkbox handling should place checkboxes after regular inputs in the same group 1`] = `-1`;

exports[`defaultNodeSorter complex sorting scenarios should correctly sort a mixed array of nodes 1`] = `
[
  {
    "group": "oidc",
    "inputType": "text",
    "type": "input",
  },
  {
    "group": "default",
    "inputType": "text",
    "type": "input",
  },
  {
    "group": "password",
    "inputType": "text",
    "type": "input",
  },
  {
    "group": "captcha",
    "inputType": undefined,
    "type": "div",
  },
  {
    "group": "default",
    "inputType": "checkbox",
    "type": "input",
  },
  {
    "group": "password",
    "inputType": "checkbox",
    "type": "input",
  },
  {
    "group": "password",
    "inputType": "submit",
    "type": "input",
  },
]
`;

exports[`defaultNodeSorter complex sorting scenarios should handle all default node orders 1`] = `
[
  {
    "group": "oidc",
    "inputType": "text",
    "type": "input",
  },
  {
    "group": "saml",
    "inputType": "text",
    "type": "input",
  },
  {
    "group": "identifier_first",
    "inputType": "text",
    "type": "input",
  },
  {
    "group": "default",
    "inputType": "text",
    "type": "input",
  },
  {
    "group": "profile",
    "inputType": "text",
    "type": "input",
  },
  {
    "group": "password",
    "inputType": "text",
    "type": "input",
  },
  {
    "group": "passkey",
    "inputType": "text",
    "type": "input",
  },
  {
    "group": "code",
    "inputType": "text",
    "type": "input",
  },
  {
    "group": "captcha",
    "inputType": "text",
    "type": "input",
  },
  {
    "group": "webauthn",
    "inputType": "text",
    "type": "input",
  },
]
`;

exports[`defaultNodeSorter group ordering within the same slot should order groups according to defaultNodeOrder 1`] = `-1`;

exports[`defaultNodeSorter group ordering within the same slot should order multiple groups correctly 1`] = `
[
  {
    "group": "oidc",
    "inputType": "text",
    "type": "input",
  },
  {
    "group": "default",
    "inputType": "text",
    "type": "input",
  },
  {
    "group": "password",
    "inputType": "text",
    "type": "input",
  },
  {
    "group": "webauthn",
    "inputType": "text",
    "type": "input",
  },
]
`;

exports[`defaultNodeSorter stability should maintain relative order of equal elements 1`] = `
[
  {
    "group": "default",
    "id": 3,
    "inputType": "text",
    "type": "input",
  },
  {
    "group": "default",
    "id": 1,
    "inputType": "text",
    "type": "input",
  },
  {
    "group": "default",
    "id": 2,
    "inputType": "text",
    "type": "input",
  },
]
`;

exports[`defaultNodeSorter unknown groups should maintain stability for multiple unknown groups 1`] = `0`;

exports[`defaultNodeSorter unknown groups should place unknown groups after known groups 1`] = `-5`;
